# Cloud-Native-Multimodal-Drug-Prioritization-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml  data.yaml  mlflow.yaml  model.yaml  ranking.yaml  serving.yaml
docker/: Dockerfile.api  docker-compose.yml
docs/: advanced-upgrade-graph-fusion.md  api_usage.md  architecture.md  ci.md  cloud-aws-free-tier.md  deployment.md  github-setup.md  mlops.md  monitoring.md  resume-and-portfolio.md  resume_bullets.md  roadmap.md
scripts/: run_data_ingestion.py  run_evaluation.py  run_feature_pipeline.py  run_graph_fusion_evaluation.py  run_graph_fusion_train.py  run_inference_demo.py  run_multimodal_evaluation.py  run_multimodal_train.py  run_ranking.py  run_three_way_comparison.py  run_train_pipeline.py  start_local_stack.ps1
src/api/: deps.py  main.py  schemas.py
src/features/: build_feature_table.py  metadata_features.py  mol_graph.py  rdkit_features.py
src/ingestion/: download_tdc.py  pubchem_enrich.py  validate_schema.py
src/models/: compare_models.py  evaluate.py  graph_fusion_nn.py  graph_fusion_predict.py  registry.py  train_baseline.py  train_graph_fusion.py  train_multimodal.py
src/monitoring/: logging_config.py  metrics.py  middleware.py
src/ranking/: explain.py  inference.py  ranker.py  score.py
src/utils/: io.py  (+3 more)
tests/: conftest.py  test_api.py  test_config.py  test_features.py  test_graph_fusion.py  test_ingestion.py  test_mlflow_tracking.py  test_models.py  test_mol_graph.py  test_ranking.py
(+3 files in other folders)
